--- a/OpenCart/test-output/old/Suite/classes.html
+++ b/OpenCart/test-output/old/Suite/classes.html
@@ -12,19 +12,28 @@
 <tr>
 <td>&nbsp;</td>
 <td>forgotPassword</td>
-<td>&nbsp;</td></tr>
+<td>Sanity </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>testHeaders</td>
+<td>Smoke </td>
+</tr>
 <tr>
 <td>&nbsp;</td>
 <td>testFacebookLink</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>testLoginInvalid</td>
-<td>&nbsp;</td></tr>
+<td>Sanity </td>
+</tr>
 <tr>
 <td>&nbsp;</td>
 <td>testAllLinks</td>
-<td>&nbsp;</td></tr>
+<td>Sanity </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>testLoginInvalid</td>
+<td>Sanity </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
