--- a/OpenCart/test-output/old/Default suite/groups.html
+++ b/OpenCart/test-output/old/Default suite/groups.html
@@ -1,1 +1,4 @@
-<h2>Groups used for this test run</h2>
+<h2>Groups used for this test run</h2><table border="1">
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>Sanity</td><td>LandingPageTest.testAllLinks()[pri:0, instance:tests.LandingPageTest@49e53c76]<br/>LandingPageTest.forgotPassword()[pri:0, instance:tests.LandingPageTest@49e53c76]<br/></td></tr>
+<tr><td>Smoke</td><td>LandingPageTest.testLoginInvalid()[pri:0, instance:tests.LandingPageTest@49e53c76]<br/>LandingPageTest.testFacebookLink()[pri:0, instance:tests.LandingPageTest@49e53c76]<br/></td></tr>
+</table>
