--- a/OpenCart/test-output/old/Suite/methods-not-run.html
+++ b/OpenCart/test-output/old/Suite/methods-not-run.html
@@ -1,2 +1,6 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>tests.LandingPageTest.forgotPassword</td></tr>
+<tr><td>tests.LandingPageTest.testLoginInvalid</td></tr>
+<tr><td>tests.LandingPageTest.testAllLinks</td></tr>
+<tr><td>tests.LandingPageTest.testFacebookLink</td></tr>
 </table>
