--- a/OpenCart/test-output/old/Suite/methods.html
+++ b/OpenCart/test-output/old/Suite/methods.html
@@ -1,28 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="84ab65">  <td>23/02/12 23:03:52</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LandingPageTest.testLoginInvalid()[pri:0, instance:tests.LandingPageTest@351d00c0]">testLoginInvalid</td> 
-  <td>TestNG-tests-1@1004023029</td>   <td></td> </tr>
-<tr bgcolor="f888f6">  <td>23/02/12 23:03:45</td>   <td>-6625</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.initializeTwo()[pri:0, instance:tests.LandingPageTest@351d00c0]">&gt;&gt;initializeTwo</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1004023029</td>   <td></td> </tr>
-<tr bgcolor="84ab65">  <td>23/02/12 23:03:41</td>   <td>-10063</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LandingPageTest.testFacebookLink()[pri:0, instance:tests.LandingPageTest@351d00c0]">testFacebookLink</td> 
-  <td>TestNG-tests-1@1004023029</td>   <td></td> </tr>
-<tr bgcolor="84ab65">  <td>23/02/12 23:03:22</td>   <td>-29434</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LandingPageTest.forgotPassword()[pri:0, instance:tests.LandingPageTest@351d00c0]">forgotPassword</td> 
-  <td>TestNG-tests-1@1004023029</td>   <td></td> </tr>
-<tr bgcolor="f888f6">  <td>23/02/12 23:03:45</td>   <td>-6625</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.initializeTwo()[pri:0, instance:tests.LandingPageTest@351d00c0]">&gt;&gt;initializeTwo</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1004023029</td>   <td></td> </tr>
-<tr bgcolor="f888f6">  <td>23/02/12 23:04:05</td>   <td>13109</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDownTwo()[pri:0, instance:tests.LandingPageTest@351d00c0]">&lt;&lt;tearDownTwo</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1004023029</td>   <td></td> </tr>
-<tr bgcolor="f888f6">  <td>23/02/12 23:03:45</td>   <td>-6625</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.initializeTwo()[pri:0, instance:tests.LandingPageTest@351d00c0]">&gt;&gt;initializeTwo</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1004023029</td>   <td></td> </tr>
-<tr bgcolor="f888f6">  <td>23/02/12 23:04:05</td>   <td>13109</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDownTwo()[pri:0, instance:tests.LandingPageTest@351d00c0]">&lt;&lt;tearDownTwo</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1004023029</td>   <td></td> </tr>
-<tr bgcolor="f888f6">  <td>23/02/12 23:03:45</td>   <td>-6625</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.initializeTwo()[pri:0, instance:tests.LandingPageTest@351d00c0]">&gt;&gt;initializeTwo</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1004023029</td>   <td></td> </tr>
-<tr bgcolor="f888f6">  <td>23/02/12 23:04:05</td>   <td>13109</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDownTwo()[pri:0, instance:tests.LandingPageTest@351d00c0]">&lt;&lt;tearDownTwo</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1004023029</td>   <td></td> </tr>
-<tr bgcolor="84ab65">  <td>23/02/12 23:03:30</td>   <td>-21784</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LandingPageTest.testAllLinks()[pri:0, instance:tests.LandingPageTest@351d00c0]">testAllLinks</td> 
-  <td>TestNG-tests-1@1004023029</td>   <td></td> </tr>
-<tr bgcolor="f888f6">  <td>23/02/12 23:04:05</td>   <td>13109</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDownTwo()[pri:0, instance:tests.LandingPageTest@351d00c0]">&lt;&lt;tearDownTwo</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1004023029</td>   <td></td> </tr>
+<tr bgcolor="e6e07c">  <td>23/02/13 20:54:50</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LandingPageTest.testHeaders()[pri:0, instance:tests.LandingPageTest@313ac989]">testHeaders</td> 
+  <td>TestNG-tests-1@2012330741</td>   <td></td> </tr>
+<tr bgcolor="719efb">  <td>23/02/13 20:54:43</td>   <td>-6962</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.initializeTwo()[pri:0, instance:tests.LandingPageTest@313ac989]">&gt;&gt;initializeTwo</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@2012330741</td>   <td></td> </tr>
+<tr bgcolor="719efb">  <td>23/02/13 20:54:52</td>   <td>1846</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDownTwo()[pri:0, instance:tests.LandingPageTest@313ac989]">&lt;&lt;tearDownTwo</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@2012330741</td>   <td></td> </tr>
 </table>
