--- a/OpenCart/test-output/old/Suite/groups.html
+++ b/OpenCart/test-output/old/Suite/groups.html
@@ -1,3 +1,3 @@
 <h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>Smoke</td><td>LandingPageTest.testHeaders()[pri:0, instance:tests.LandingPageTest@313ac989]<br/></td></tr>
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>db</td><td>LandingPageTest.testLoginInvalid()[pri:0, instance:tests.LandingPageTest@2a65fe7c]<br/></td></tr>
 </table>
