--- a/OpenCart/test-output/old/Suite/methods.html
+++ b/OpenCart/test-output/old/Suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e6e07c">  <td>23/02/13 20:54:50</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LandingPageTest.testHeaders()[pri:0, instance:tests.LandingPageTest@313ac989]">testHeaders</td> 
-  <td>TestNG-tests-1@2012330741</td>   <td></td> </tr>
-<tr bgcolor="719efb">  <td>23/02/13 20:54:43</td>   <td>-6962</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.initializeTwo()[pri:0, instance:tests.LandingPageTest@313ac989]">&gt;&gt;initializeTwo</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@2012330741</td>   <td></td> </tr>
-<tr bgcolor="719efb">  <td>23/02/13 20:54:52</td>   <td>1846</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDownTwo()[pri:0, instance:tests.LandingPageTest@313ac989]">&lt;&lt;tearDownTwo</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@2012330741</td>   <td></td> </tr>
+<tr bgcolor="908cc0">  <td>23/02/15 14:22:03</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.initializeTwo()[pri:0, instance:tests.LandingPageTest@2a65fe7c]">&gt;&gt;initializeTwo</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@20049680</td>   <td></td> </tr>
+<tr bgcolor="f888f6">  <td>23/02/15 14:22:10</td>   <td>6896</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LandingPageTest.testLoginInvalid()[pri:0, instance:tests.LandingPageTest@2a65fe7c]">testLoginInvalid</td> 
+  <td>TestNG-tests-1@20049680</td>   <td></td> </tr>
+<tr bgcolor="908cc0">  <td>23/02/15 14:22:36</td>   <td>32817</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDownTwo()[pri:0, instance:tests.LandingPageTest@2a65fe7c]">&lt;&lt;tearDownTwo</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@20049680</td>   <td></td> </tr>
 </table>
